fix li alignment issues

--- a/css/mobile.less
+++ b/css/mobile.less
@@ -77,19 +77,20 @@ button {
 
 #about{
 
-	padding: .5em 1em;
+	padding: 1em;
 
 	#opener {
-		font-size: 1.2em;
+		font-size: 1.5em;
 	}
 
 	#profile {
     	padding: 0;
+    	max-width: 95%;
 
 		li{
 		min-height: inherit;
 		width: inherit;
-		margin: 1em auto 0 auto;
+		margin: 1em auto;
 
 
 		}
@@ -135,12 +136,11 @@ button {
 }
 
 .data {
-	margin: .5em 0;
+	// margin: .5em auto;
 	li {
-		display: inline-block;
 		height: 4.8em;
 		width: 95%;
-		margin-top: .5em;
+		margin: 1em auto;
 		text-align: center;
 		h3 {
 			border-bottom: 1px dashed fadeout(@White, 10%);
@@ -159,7 +159,7 @@ button {
 #next, #back {
 	width: 95%;
 	padding: .5em 0;
-	margin-top: 1em;
+	margin: 0;
 	font-size: 1.5em;
 }
 
